  menu_minipanels_prepare_links().
#1586122 by DamienMcKenna: Bug in how menus were enabled, should work now.
#1396032 by DamienMckenna: Manually re-load contextual menus on all qTip popups
  and cleans up the output code to better use the render API.
#1604638 by DamienMcKenna: Added a note to the README.txt about a compatibility
  problem with old versions of Menu_Attributes.


Menu_MiniPanels 7.x-1.0-rc6, 2012-04-28
---------------------------------------
#1440474 by davidwhthomas, DamienMcKenna: Allow pages to be skipped by path.
#1535712 by DamienMcKenna: Quick links to toggle menus from the settings page.
#1551562 by DamienMcKenna: Don't load qTip code if no menu items configured.
#1535736 by DamienMcKenna: Documentation updates.


Menu_MiniPanels 7.x-1.0-rc5, 2012-04-08
---------------------------------------
#1505112 by DamienMcKenna: Updated drupal_add_js() calls to ensure the module's
  files load before any custom style JS files are loaded.
#1199790 by DamienMcKenna: Fixed update 7101.
#1199790 by DamienMcKenna: Slight code cleanup on the update scripts.
#1337710 by DamienMcKenna: Moved the menu path to the correct location, and
  slightly improved the settings menu item's description.
#1387914 by DamienMcKenna: Updated the README.txt file.
#1216546 by DamienMcKenna: Added support for the Hide Delay setting.
#1508774 by DamienMcKenna: Added the 'configure' directive to the info file so
  that a link to the settings page shows on the main modules page.
#1508776 by DamienMcKenna: Show the qTip library status on the settings page.
#1284396 by DamienMcKenna: Settings form UX improvements.


Menu_MiniPanels 7.x-1.0-rc4, 2012-03-23
---------------------------------------
#1370840 by DuaelFr: Stop searching for the JS file at the first matching path.
#1491396 by DamienMcKenna: Collision between admin and non-admin JS.
#1491502 by DamienMcKenna: Mention the Drush command in hook_requirements.
#1491490 by DamienMcKenna: Changed to use hook_form_FORM_ID_alter().